-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 14
-
Component/s: client-libs
-
b25
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8247206 | 13.0.4 | Yasumasa Suenaga | P4 | Resolved | Fixed | b05 |
| JDK-8240544 | 11.0.8-oracle | Alexey Ivanov | P4 | Resolved | Fixed | b01 |
| JDK-8240653 | 11.0.8 | Yasumasa Suenaga | P4 | Resolved | Fixed | b01 |
I tried to build OpenJDK with VS 2019 (16.3.8), but it couldn't as below.
(My laptop sets locale to Japanese, sorry)
```
c:/OpenJDK/jdk/src/java.desktop/windows/native/common/awt/systemscale/systemScale.cpp(96): error C2220: 次の警告はエラーとして処理されます
c:/OpenJDK/jdk/src/java.desktop/windows/native/common/awt/systemscale/systemScale.cpp(96): warning C4996: 'ID2D1Factory::GetDesktopDpi': Deprecated. Use DisplayInformation::LogicalDpi for Windows Store Apps or GetDpiForWindow for desktop apps.
c:\progra~2\wi3cf2~1\10\include\100183~1.0\um\d2d1.h(3355): note: 'ID2D1Factory::GetDesktopDpi' の宣言を確認してください
```
(My laptop sets locale to Japanese, sorry)
```
c:/OpenJDK/jdk/src/java.desktop/windows/native/common/awt/systemscale/systemScale.cpp(96): error C2220: 次の警告はエラーとして処理されます
c:/OpenJDK/jdk/src/java.desktop/windows/native/common/awt/systemscale/systemScale.cpp(96): warning C4996: 'ID2D1Factory::GetDesktopDpi': Deprecated. Use DisplayInformation::LogicalDpi for Windows Store Apps or GetDpiForWindow for desktop apps.
c:\progra~2\wi3cf2~1\10\include\100183~1.0\um\d2d1.h(3355): note: 'ID2D1Factory::GetDesktopDpi' の宣言を確認してください
```
- backported by
-
JDK-8240544 systemScale.cpp could not compile with VS2019
-
- Resolved
-
-
JDK-8240653 systemScale.cpp could not compile with VS2019
-
- Resolved
-
-
JDK-8247206 systemScale.cpp could not compile with VS2019
-
- Resolved
-
- relates to
-
JDK-8234398 Replace ID2D1Factory::GetDesktopDpi with GetDeviceCaps
-
- Resolved
-