8233707: systemScale.cpp could not compile with VS2019

Reviewed-by: serb, aivanov